# LightBT

./: README.md  pyproject.toml  requirements.txt
examples/: group.py  group_daily.py  group_monthly.py  speed.py  stocks.py
lightbt/: __init__.py  base.py  callbacks.py  enums.py  portfolio.py  position.py  signals.py  stats.py  utils.py
